[workspace]
members = [
    "crates/cudarse/cudarse-driver",
    "crates/cudarse/cudarse-driver-sys",
    "crates/cudarse/cudarse-npp",
    "crates/cudarse/cudarse-npp-sys",
    "crates/cudarse/cudarse-video",
    "crates/cudarse/cudarse-video-sys",
    "crates/codec-bitstream",
    "crates/nvptx-core",
    "crates/ssimulacra2-cuda-kernel",
    "crates/ssimulacra2-cuda",
    "crates/stats",
    "crates/ssimulacra2-cuda-cli",
    "crates/vmaf",
    "crates/vmaf-cuda",
    "crates/vmaf-cuda-kernel",
]
resolver = "2"

[workspace.package]
authors = ["Guillaume Anthouard"]
homepage = "https://github.com/Gui-Yom/turbo-metrics"
repository = "https://github.com/Gui-Yom/turbo-metrics"
edition = "2021"

[workspace.dependencies]
codec-bitstream = { path = "crates/codec-bitstream", default-features = false }
cudarse-driver = { path = "crates/cudarse/cudarse-driver", default-features = false }
cudarse-driver-sys = { path = "crates/cudarse/cudarse-driver-sys", default-features = false }
cudarse-npp = { path = "crates/cudarse/cudarse-npp", default-features = false }
cudarse-npp-sys = { path = "crates/cudarse/cudarse-npp-sys", default-features = false }
cudarse-video = { path = "crates/cudarse/cudarse-video", default-features = false }
cudarse-video-sys = { path = "crates/cudarse/cudarse-video-sys", default-features = false }
nvptx-core = { path = "crates/nvptx-core", default-features = false }
ssimulacra2-cuda = { path = "crates/ssimulacra2-cuda", default-features = false }
stats = { path = "crates/stats", default-features = false }

array-init = "2"
bindgen = "0.70"
bitstream-io = "2"
#cudarc = { version = "0.10", default-features = false, features = ["std", "driver"] }#, "cuda-version-from-build-system", "dynamic-linking"] }
incr_stats = "1"
indices = "0.3"
h264-reader = "0.7"
matroska-demuxer = "0.5"
nalgebra = "0.33"
paste = "1"
rerun = "0.18"
spsc = { path = "../spsc" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zune-image = { version = "0.4", default-features = false, features = ["png", "simd", "metadata"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

# Profile specifically for building nvptx code
[profile.release-nvptx]
inherits = "release"
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
overflow-checks = false

[profile.release]
opt-level = 3
lto = "fat"
debug = "full"
split-debuginfo = "packed"
codegen-units = 1
