[workspace]
members = [
    "crates/amf",
    "crates/amf-sys",
    "crates/codec-bitstream",
    "crates/cuda-colorspace",
    "crates/cuda-colorspace-kernel",
    "crates/cudarse/cudarse-driver",
    "crates/cudarse/cudarse-driver-sys",
    "crates/cudarse/cudarse-npp",
    "crates/cudarse/cudarse-npp-sys",
    "crates/cudarse/cudarse-video",
    "crates/cudarse/cudarse-video-sys",
    "crates/superframe",
    "crates/nvptx-builder",
    "crates/nvptx-std",
    "crates/quick-stats",
    "crates/ssimulacra2-cuda",
    "crates/ssimulacra2-cuda-kernel",
    "crates/turbo-metrics",
    "crates/turbo-metrics-cli",
    "crates/vmaf",
    "crates/vmaf-cuda",
    "crates/vmaf-cuda-kernel",
    "crates/xpsnr-cuda",
    "crates/xpsnr-cuda-kernel",
]
default-members = [
    "crates/turbo-metrics-cli",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[workspace.package]
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
homepage = "https://github.com/Gui-Yom/turbo-metrics"
repository = "https://github.com/Gui-Yom/turbo-metrics"
edition = "2021"

[workspace.dependencies]
amf = { version = "0.1", path = "crates/amf", default-features = false }
amf-sys = { version = "0.1", path = "crates/amf-sys", default-features = false }
codec-bitstream = { version = "0.1", path = "crates/codec-bitstream", default-features = false }
cuda-colorspace = { version = "0.1", path = "crates/cuda-colorspace", default-features = false }
cudarse-driver = { version = "0.1", path = "crates/cudarse/cudarse-driver", default-features = false }
cudarse-driver-sys = { version = "0.1", path = "crates/cudarse/cudarse-driver-sys", default-features = false }
cudarse-npp = { version = "0.1", path = "crates/cudarse/cudarse-npp", default-features = false }
cudarse-npp-sys = { version = "0.1", path = "crates/cudarse/cudarse-npp-sys", default-features = false }
cudarse-video = { version = "0.1", path = "crates/cudarse/cudarse-video", default-features = false }
cudarse-video-sys = { version = "0.1", path = "crates/cudarse/cudarse-video-sys", default-features = false }
nvptx-builder = { version = "0.1", path = "crates/nvptx-builder", default-features = false }
nvptx-std = { version = "0.1", path = "crates/nvptx-std", default-features = false }
quick-stats = { version = "0.1", path = "crates/quick-stats", default-features = false }
ssimulacra2-cuda = { version = "0.1", path = "crates/ssimulacra2-cuda", default-features = false }
superframe = { version = "0.1", path = "crates/superframe" }
turbo-metrics = { version = "0.3", path = "crates/turbo-metrics", default-features = false }
xpsnr-cuda = { version = "0.1", path = "crates/xpsnr-cuda", default-features = false }

array-init = "2"
bindgen = "0.70"
bitstream-io = "2"
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "usage", "wrap_help"] }
csv = "1"
h264-reader = "0.7"
image = { version = "0.25", default-features = false }
indicatif = "0.17"
indices = "0.3"
libloading = "0.8"
matroska-demuxer = "0.5"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
paste = "1"
rerun = "0.18"
rustversion = "1"
#spsc = { path = "../spsc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-indicatif = { version = "0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
widestring = "1"
zune-core = { version = "0.4", default-features = false, features = ["std"] }
zune-image = { version = "0.4", default-features = false }

# Profile specifically for building nvptx code
[profile.release-nvptx]
inherits = "release"
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
overflow-checks = false

[profile.release]
opt-level = 3
lto = "fat"
debug = "full"
split-debuginfo = "packed"
codegen-units = 1
