[package]
name = "codec-bitstream"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bitstream-io = { workspace = true }
h264-reader = { workspace = true }

[dev-dependencies]
matroska-demuxer = { workspace = true }
