[package]
name = "codec-bitstream"
version = "0.1.0"
description = "Parsers for common bitstream structures found in video codecs"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"

[dependencies]
bitstream-io = { workspace = true }
h264-reader = { workspace = true }

[dev-dependencies]
matroska-demuxer = { workspace = true }
