[package]
name = "cuda-colorspace-kernel"
version = "0.1.0"
description = "Colorspace handling on CUDA (device code)"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nvptx-std = { workspace = true }
