[package]
name = "cuda-colorspace"
version = "0.1.0"
description = "Colorspace handling on CUDA"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT"
rust-version = "1.77"

[dependencies]
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true }

[dev-dependencies]
cudarse-npp = { workspace = true, features = ["isu", "idei"] }

[build-dependencies]
nvptx-builder = { workspace = true }
