[package]
name = "cuda-colorspace"
version = "0.1.0"
description = "Colorspace handling on CUDA"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT"
rust-version = "1.77"

[dependencies]
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true }
cuda-colorspace-kernel = { version = "0.1", path = "../cuda-colorspace-kernel", artifact = "cdylib", target = "nvptx64-nvidia-cuda" }

[dev-dependencies]
cudarse-npp = { workspace = true, features = ["isu", "idei"] }
