[package]
name = "cuda-driver"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-driver-sys = { workspace = true }

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cuda-driver-sys/static"]
