[package]
name = "cuda-npp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-npp-sys = { version = "0.1", path = "../cuda-npp-sys", default-features = false }
paste.workspace = true

[dev-dependencies]
cudarc.workspace = true

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cuda-npp-sys/static"]
# Image Arithmetic and Logical operations
ial = ["cuda-npp-sys/ial"]
# Image Color Conversions
icc = ["cuda-npp-sys/icc"]
# Image Data Exchange and Initialization
idei = ["cuda-npp-sys/idei"]
# Image Filtering
if = ["cuda-npp-sys/if"]
# Image Gometric transforms (resize, transforms)
ig = ["cuda-npp-sys/ig"]
# Image Statistics
ist = ["cuda-npp-sys/ist"]
# Image Support functions (malloc & free)
isu = ["cuda-npp-sys/isu"]
