[package]
name = "cuda_npp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda_npp_sys = { version = "0.1", path = "../cuda_npp_sys", default-features = false }
paste.workspace = true

[dev-dependencies]
cudarc.workspace = true

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cuda_npp_sys/static"]
# Image Arithmetic and Logical operations
ial = ["cuda_npp_sys/ial"]
# Image Color Conversions
icc = ["cuda_npp_sys/icc"]
# Image Data Exchange and Initialization
idei = ["cuda_npp_sys/idei"]
# Image Filtering
if = ["cuda_npp_sys/if"]
# Image Gometric transforms (resize, transforms)
ig = ["cuda_npp_sys/ig"]
# Image Statistics
ist = ["cuda_npp_sys/ist"]
# Image Support functions (malloc & free)
isu = ["cuda_npp_sys/isu"]
