[package]
name = "cuda_npp_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"

[features]
default = ["static"]
# Static linking against cuda libraries
static = []
# Color conversion
icc = []
# Image data exchange and initialization
idei = []
# Image filtering
if = []
# Geometric transforms (resize, transforms)
ig = []
# Support functions (malloc & free)
isu = []
