[package]
name = "cuda_npp_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"

[features]
default = ["static"]
# Static linking against cuda libraries
static = []
# Image Arithmetic and Logical operations
ial = []
# Image color conversion
icc = []
# Image data exchange and initialization
idei = []
# Image filtering
if = []
# Image geometric transforms (resize, transforms)
ig = []
# Image statistics
ist = []
# Image support functions (malloc & free)
isu = []
