[package]
name = "nv-video-codec-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda-driver-sys = { path = "../cuda-driver-sys", default-features = false }

[build-dependencies]
bindgen.workspace = true

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cuda-driver-sys/static"]
