[package]
name = "nv-video-codec-sys"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
cuda-driver-sys = { workspace = true }

[build-dependencies]
bindgen.workspace = true

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cuda-driver-sys/static"]
