[package]
name = "nv-video-codec"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-driver = { workspace = true }
cuda-npp = { workspace = true, optional = true, features = ["icc", "isu"] }
nv-video-codec-sys = { workspace = true }
spsc = { workspace = true }
tracing = { workspace = true }
zune-image.workspace = true

[dev-dependencies]
codec-bitstream = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cuda-driver/static", "nv-video-codec-sys/static", "cuda-npp?/static"]
# Convert decoded images into NPP images
npp = ["cuda-npp"]
