[package]
name = "ssimulacra2-cuda-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
codec-bitstream = { workspace = true }
cuda-driver = { workspace = true }
incr_stats = { workspace = true }
matroska-demuxer = { workspace = true }
nv-video-codec = { workspace = true, features = ["cuda-npp"] }
ssimulacra2-cuda = { workspace = true }
spsc = { workspace = true }
zune-image = { workspace = true }
