[package]
name = "ssimulacra2-cuda-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nvptx-core = { version = "0.1", path = "../nvptx-core" }

[build-dependencies]
nalgebra = "0.32"
