[package]
name = "ssimulacra2-cuda-kernel"
version = "0.1.0"
description = "Ssimulacra2 CUDA implementation (device code)"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nvptx-std = { workspace = true }

[build-dependencies]
nalgebra = { workspace = true }
