[package]
name = "ssimulacra2-cuda"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = { workspace = true }
cuda-driver = { workspace = true }
cuda-npp = { workspace = true, features = ["isu", "ial", "idei", "if", "ist"] }
indices = { workspace = true }

[dev-dependencies]
zune-image.workspace = true

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cuda-driver/static", "cuda-npp/static"]
