[package]
name = "ssimulacra2-cuda"
version = "0.1.0"
description = "Ssimulacra2 implementation running on CUDA"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = { workspace = true }
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu", "ial", "idei", "if", "ist"] }
indices = { workspace = true }

[build-dependencies]
nvptx-builder = { workspace = true }

[dev-dependencies]
zune-image = { workspace = true, features = ["png", "simd", "metadata"] }

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cudarse-driver/static", "cudarse-npp/static"]
