[package]
name = "ssimulacra2-npp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc.workspace = true
cuda_npp = { version = "0.1", path = "../cuda_npp", features = ["ial", "icc", "idei", "if", "ig", "ist", "isu"] }
zune-image.workspace = true

[build-dependencies]
nalgebra.workspace = true
