[package]
name = "superframe"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version = "1.77"

[dependencies]
array-init = { workspace = true }
cudarse-driver = { workspace = true, optional = true }

[features]
default = ["cuda"]
cuda = ["dep:cudarse-driver"]
