[package]
name = "turbo-metrics-cli"
version = "0.3.0"
description = "Toolkit to compute quality metrics fast using a GPU (CLI version)"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version = "1.79"

[[bin]]
name = "turbo-metrics"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
turbo-metrics = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["png", "jpeg", "jpeg-xl"]
# Try to statically link to a maximum of native libraries
static = ["turbo-metrics/static"]
# Image format support
png = ["turbo-metrics/png"]
jpeg = ["turbo-metrics/jpeg"]
jpeg-xl = ["turbo-metrics/jpeg-xl"]
bmp = ["turbo-metrics/bmp"]
qoi = ["turbo-metrics/qoi"]
gif = ["turbo-metrics/gif"]
tiff = ["turbo-metrics/tiff"]
webp = ["turbo-metrics/webp"]
avif = ["turbo-metrics/avif"]
