[package]
name = "turbo-metrics"
version = "0.3.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "AGPL-3"
rust-version = "1.79"

[dependencies]
clap = { workspace = true }
codec-bitstream = { workspace = true }
cuda-colorspace = { workspace = true }
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu", "ist"] }
cudarse-video = { workspace = true, features = ["npp"] }
matroska-demuxer = { workspace = true }
ssimulacra2-cuda = { workspace = true }
stats = { workspace = true }
zune-image = { workspace = true, features = ["png", "simd", "metadata"] }

[features]
default = []
static = ["cudarse-driver/static", "cudarse-npp/static", "cudarse-video/static", "ssimulacra2-cuda/static"]
