[package]
name = "turbo-metrics"
version = "0.3.0"
description = "Toolkit to compute quality metrics fast using a GPU"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version = "1.79"

[dependencies]
codec-bitstream = { workspace = true }
cuda-colorspace = { workspace = true }
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu", "ist"] }
cudarse-video = { workspace = true, features = ["npp"] }
image = { workspace = true }
matroska-demuxer = { workspace = true }
ssimulacra2-cuda = { workspace = true }
quick-stats = { workspace = true }
zune-core = { workspace = true }
zune-image = { workspace = true, features = ["simd", "metadata", "threads"] }

[features]
default = ["png", "jpeg", "jpeg-xl"]
# Try to statically link to a maximum of native libraries
static = ["cudarse-driver/static", "cudarse-npp/static", "cudarse-video/static", "ssimulacra2-cuda/static"]
# Image format support
png = ["zune-image/png"]
jpeg = ["zune-image/jpeg"]
jpeg-xl = ["zune-image/jpeg-xl"]
bmp = ["zune-image/bmp"]
qoi = ["image/qoi"]
gif = ["image/gif"]
tiff = ["image/tiff"]
webp = ["image/webp"]
avif = ["image/avif-native"]
