[package]
name = "vmaf-cuda"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu", "ial", "ist"] }
zune-image.workspace = true
