[package]
name = "vmaf-cuda"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version = "1.77"

[dependencies]
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu", "ial", "ist"] }
zune-image = { workspace = true, features = ["png", "simd", "metadata"] }

[build-dependencies]
nvptx-builder = { workspace = true }
