[package]
name = "xpsnr-cuda-kernel"
version = "0.1.0"
description = "XPSNR metric computation (device code)"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nvptx-std = { workspace = true }

[build-dependencies]
nvptx-builder = { workspace = true }
