[package]
name = "xpsnr-cuda"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["if", "ist", "isu", "idei"] }

[build-dependencies]
nvptx-builder = { workspace = true }
