[package]
name = "cudarse-driver-sys"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"
rust-version = "1.77"

[dependencies]

[build-dependencies]
bindgen.workspace = true

[features]
default = ["static"]
# Static linking against cuda libraries
static = []
