[package]
name = "cudarse-driver"
version = "0.1.0"
description = "Bindings to the CUDA Driver API that tries to stay faithful to the original"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarse-driver-sys = { workspace = true }

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cudarse-driver-sys/static"]
