[package]
name = "cudarse-video-sys"
version = "0.1.0"
description = "Low-level bindings to the CUVID/NVDEC libraries"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"
rust-version = "1.77"

[dependencies]
cudarse-driver-sys = { workspace = true }
cudarse-npp-sys = { workspace = true, optional = true }

[build-dependencies]
bindgen.workspace = true

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cudarse-driver-sys/static", "cudarse-npp-sys?/static"]
npp = ["dep:cudarse-npp-sys"]
